--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -27,7 +27,7 @@
           <table class="table sp_table sp_resource-list">
             <tr ng-controller="ResourceCtrl" class="resource {{resource.type}}" ng-repeat="resource in resources | orderBy: 'name' | filter:{type: typeFilter} | filter:query" ng-switch on="resource.type">
               <td class="sp_thumb">
-                <img class="media-object" src="/image/64x64/{{resource.source.id}}.{{resource.source.extension}}" ng-switch-when="image">
+                <img class="media-object" ng-src="{{apiBase}}image/64x64/{{resource.source.id}}.{{resource.source.extension}}" ng-switch-when="image">
                 <img class="media-object" src="/assets/img/icon_sound.png" ng-switch-when="sound">
                 <img class="media-object" src="/assets/img/icon_light.png" ng-switch-when="light">
               </td>
@@ -36,9 +36,9 @@
               </td>
               <td class="sp_actions">
                 <div class="btn-group pull-right">
-                  <button class="btn" ng-click="toggleSound(resource)" ng-switch-when="sound"><i class="icon-{{playMsg}}"></i></button>
-                  <button class="btn" ng-click="editResource(resource)"><i class="icon-cog"></i></button>
-                  <button class="btn" ng-click="addToPalette(resource)"><i class="icon-arrow-right"></i></button>
+                  <button class="btn" ng-click="toggleSound(resource)" ng-switch-when="sound">Play<i class="icon-{{playMsg}}"></i></button>
+                  <button class="btn" ng-click="editResource(resource)">Edit<i class="icon-cog"></i></button>
+                  <button class="btn" ng-click="addToPalette(resource)">Add<i class="icon-arrow-right"></i></button>
                 </div>
               </td>
             </tr>
@@ -54,7 +54,7 @@
               <div ng-repeat="asset in palette.assets" ng-controller="AssetCtrl" class="media well {{asset.type}} palette_item"
                    ng-switch on="asset.type">
                   <a class="pull-left" href="#">
-                      <img class="media-object" src="/image/64x64/{{asset.source.id}}.{{asset.source.extension}}"
+                    <img class="media-object" src="{{apiBase}}image/64x64/{{asset.source.id}}.{{asset.source.extension}}"
                            ng-switch-when="image">
                       <img class="media-object" src="/assets/img/icon_sound.png" ng-switch-when="sound">
                       <img class="media-object" src="/assets/img/icon_light.png" ng-switch-when="light">
