Editor styling fixes part 1

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,6 +1,6 @@
 // Application stylesheet. Import styles here.
 
-// TODO: Import only the styles we use.
+// TODO: Import only the styles we use!
 @import '../../vendor/bootstrap/less/bootstrap.less';
 
 // Our Bootstrap customizations.
@@ -26,6 +26,7 @@
 div.search_box {
     margin-top: 4px;
     margin-bottom: 0;
+    width: 180px;
 }
 
 ul.type_filter li a{
@@ -42,9 +43,9 @@ div.search_box {
   margin-bottom: 0;
 }
 
-input.search {
+/*input.search {
   width: 120px;
-}
+}*/
 
 ul.type_filter li a{
     padding-bottom: 14px;
@@ -244,6 +245,7 @@ input.sp_titlebox {
   font-weight:bold;
   width:76%;
   box-sizing:border-box;
+  display: inline-block;
 }
 
 .fullscreenImage {
