--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -9,12 +9,12 @@
           <div class="field_wrapper">
             <h4>Resurser</h4>
             <button class="btn btn-primary pull-right" ng-click="newResource()">
-              <i class="icon-plus icon-white"></i>&nbsp;Ny resurs&hellip;
+              <span class="glyphicon glyphicon-plus glyphicon-white"></span>&nbsp;Ny resurs&hellip;
             </button>
           </div>
-          <div class="input-append pull-right search_box">
-            <input class="span4 search" id="inputIcon" type="text" ng-model="query" placeholder="Sök"/>
-            <span class="add-on"><i class="icon-search"></i></span>
+          <div class="input-group pull-right search_box">
+            <input class="form-control" id="inputIcon" type="text" ng-model="query" placeholder="Sök"/>
+            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
           </div>
           <tabset>
             <tab heading="Alla" select="filterResources()"></tab>
@@ -36,9 +36,9 @@
               </td>
               <td class="sp_actions">
                 <div class="btn-group pull-right">
-                  <button class="btn" ng-click="toggleSound(resource)" ng-switch-when="sound">Play<i class="icon-{{playMsg}}"></i></button>
-                  <button class="btn" ng-click="editResource(resource)">Edit<i class="icon-cog"></i></button>
-                  <button class="btn" ng-click="addToPalette(resource)">Add<i class="icon-arrow-right"></i></button>
+                  <button class="btn btn-default" ng-click="toggleSound(resource)" ng-switch-when="sound"><span class="glyphicon glyphicon-{{playMsg}}"></span></button>
+                  <button class="btn btn-default" ng-click="editResource(resource)"><span class="glyphicon glyphicon-cog"></span></button>
+                  <button class="btn btn-default" ng-click="addToPalette(resource)"><span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
               </td>
             </tr>
@@ -47,8 +47,8 @@
       </div><!-- // sp_resources -->
       <div class="sp_palette" ng-controller="PaletteCtrl">
           <div class="sp_toolbar">
-              <input id="paletteTitle" ng-model="palette.name" class="sp_titlebox" type="text" placeholder="Skriv in palettens namn här" />
-              <button class="btn btn-success pull-right" ng-click="savePalette()">Spara palett</button>
+              <input id="paletteTitle" ng-model="palette.name" class="sp_titlebox form-control" type="text" placeholder="Skriv in palettens namn här" />
+              <button class="btn btn-default btn-success pull-right" ng-click="savePalette()">Spara palett</button>
           </div>
           <div class="sp_scrollport">
               <div ng-repeat="asset in palette.assets" ng-controller="AssetCtrl" class="media well {{asset.type}} palette_item"
@@ -62,45 +62,35 @@
                   <button class="close" ng-click="remove()">&times;</button>
                   <div class="media-body" ng-switch-when="image">
                       <input type="text" placeholder="Kort namn" ng-model="asset.label">
-                      <span class="help-block opacity_down"><i class="icon-picture"></i> {{asset.name}}</span>
-
+                      <span class="help-block opacity_down"><span class="glyphicon glyphicon-picture"></span> {{asset.name}}</span>
                       <div class="divider"></div>
                       <div class="btn-group pull-right">
-                          <button class="btn" ng-click="moveUp()"><i class="icon-arrow-up"></i></button>
-                          <button class="btn" ng-click="moveDown()"><i class="icon-arrow-down"></i></button>
+                          <button class="btn btn-default" ng-click="moveUp()"><span class="glyphicon glyphicon-arrow-up"></span></button>
+                          <button class="btn btn-default" ng-click="moveDown()"><span class="glyphicon glyphicon-arrow-down"></span></button>
                       </div>
                   </div>
+
                   <div class="media-body" ng-switch-when="light">
-                      <input type="text" placeholder="Kort namn" ng-model="asset.label">
-                      <span class="help-block opacity_down"><i class="icon-certificate"></i> {{asset.name}}</span>
-
-                      <div class="divider"></div>
-                      <label class="checkbox">
-                          <input type="checkbox">Lampnamn
-                      </label>
-                      <label class="checkbox">
-                          <input type="checkbox">Lampnamn
-                      </label>
-
-                      <div class="btn-group pull-right">
-                          <button class="btn" ng-click="moveUp()"><i class="icon-arrow-up"></i></button>
-                          <button class="btn" ng-click="moveDown()"><i class="icon-arrow-down"></i></button>
+                      <input type="text" class="form-control" placeholder="Kort namn" ng-model="asset.label">
+                      <div class="btn-group btn-group-sm pull-right">
+                          <button class="btn btn-default" ng-click="moveUp()"><span class="glyphicon glyphicon-arrow-up"></span></button>
+                          <button class="btn btn-default" ng-click="moveDown()"><span class="glyphicon glyphicon-arrow-down"></span></button>
                       </div>
+                      <span class="help-block opacity_down"><span class="glyphicon glyphicon-certificate"></span> {{asset.name}}</span>
                   </div>
+
                   <div class="media-body" ng-switch-when="sound">
                       <input type="text" placeholder="Kort namn" ng-model="asset.label">
-                      <span class="help-block opacity_down"><i class="icon-music"></i> {{asset.name}}</span>
-
+                      <span class="help-block opacity_down"><span class="glyphicon glyphicon-music"></span> {{asset.name}}</span>
                       <div class="divider"></div>
                       <label class="checkbox pull-right">
                           <input type="checkbox" ng-model="asset.loop">Loop
                       </label>
-                      <span class="help-block"><i class="icon-volume-up"></i> Max-volume: {{asset.maxVolume}}</span>
+                      <span class="help-block"><span class="glyphicon glyphicon-volume-up"></span> Max-volume: {{asset.maxVolume}}</span>
                       <input type="range" name="max_volume" min="0" max="1" step="0.01" ng-model="asset.maxVolume">
-
                       <div class="btn-group pull-right">
-                          <button class="btn" ng-click="moveUp()"><i class="icon-arrow-up"></i></button>
-                          <button class="btn" ng-click="moveDown()"><i class="icon-arrow-down"></i></button>
+                          <button class="btn btn-default" ng-click="moveUp()"><span class="glyphicon glyphicon-arrow-up"></span></button>
+                          <button class="btn btn-default" ng-click="moveDown()"><span class="glyphicon glyphicon-arrow-down"></span></button>
                       </div>
                   </div>
               </div>
