--- a/src/less/main.less
+++ b/src/less/main.less
@@ -43,9 +43,10 @@ div.search_box {
   margin-bottom: 0;
 }
 
-/*input.search {
-  width: 120px;
-}*/
+input.short-input {
+  width: 220px;
+  display: inline-block;
+}
 
 ul.type_filter li a{
     padding-bottom: 14px;
@@ -71,13 +72,13 @@ input[type=range]::-webkit-slider-thumb {
   border-radius: 4px;
 }
 
-div.divider {
+/*div.divider {
   height: 1px;
   margin: 9px 1px;
   overflow: hidden;
   background-color: #e5e5e5;
   border-bottom: 1px solid #ffffff;
-}
+}*/
 
 div.media-body {
     padding: 4px;
@@ -93,6 +94,10 @@ div.media-body {
 
 .palette_item div.media-body label.checkbox{
   margin-bottom: 10px;
+}
+
+div.loop {
+  margin: 0;
 }
 
 .inline {
