Notifications re-enabled.

--- a/src/app/header/header.tpl.html
+++ b/src/app/header/header.tpl.html
@@ -1,4 +1,4 @@
 <div class="sp_navbar">
-    <div class="sp_nav"><a class="sp_storypalette_home" href="/">Storypalette*</a><a href="/palettes">Alla paletter</a></div>
+    <div class="sp_nav"><a class="sp_storypalette_home" href="/">Storypalette*</a><a href="/palettes">Paletter</a></div>
     <ui-profile></ui-profile>
 </div>
