--- a/src/less/main.less
+++ b/src/less/main.less
@@ -12,6 +12,32 @@
 // TODO: Cleanup CSS
 // Only the stuff that is used should be here!
 
+@font-face {
+  font-family: 'Pacifico';
+  src: url('fonts/pacifico/Pacifico.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('fonts/source/SourceSansPro-Regular-webfont.eot?') format('eot'), url('fonts/source/SourceSansPro-Regular-webfont.woff') format('woff'), url('fonts/source/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('fonts/source/SourceSansPro-Regular-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  margin: 0;
+  font-family: SourceSansPro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+input,
+button,
+select,
+textarea,
+a {
+  font-family: SourceSansPro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 // Header
 .sp_fixedheader {
   box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
@@ -164,16 +190,16 @@ table.sp_table tr:first-child td{
 }
 
 input[type=file] {
-  color:silver;
-  font-size:12px;
-  line-height:12px;
-  margin-top:5px;
+  color: silver;
+  font-size: 12px;
+  line-height: 12px;
+  margin-top: 5px;
   font-family: SourceSansPro, Arial, Helvetica, sans-serif;
 }
 
 .sp_nav {
-  float:left;
-  line-height:44px;
+  float: left;
+  line-height: 44px;
 }
 
 .sp_navbar a{
@@ -189,16 +215,16 @@ input[type=file] {
   background-color: rgba(0,0,0,0.7);*/
   color: rgba(0,0,0,0.7);
   text-shadow: 0 0px 1px rgba(0, 0, 0, 0.25);
-  line-height:44px;
+  line-height: 44px;
 }
 
 a.sp_storypalette_home {
-  font-family:Pacifico, Georgia, "Times New Roman", Times, serif;
-  font-size:20px;
-  color:black;
-  margin-right:20px;
-  float:left;
-  line-height:38px;
+  font-family: Pacifico, Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
+  color: black;
+  margin-right: 20px;
+  float: left;
+  line-height: 38px;
   /*vertical-align: middle;*/
 }
 
