--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -35,7 +35,7 @@
                   <!--<div class="longdescription"><p>{{resource.description}}</p></div>-->
               </td>
               <td class="sp_actions">
-                <div class="btn-group pull-right">
+                <div class="btn-group btn-group-sm pull-right">
                   <button class="btn btn-default" ng-click="toggleSound(resource)" ng-switch-when="sound"><span class="glyphicon glyphicon-{{playMsg}}"></span></button>
                   <button class="btn btn-default" ng-click="editResource(resource)"><span class="glyphicon glyphicon-cog"></span></button>
                   <button class="btn btn-default" ng-click="addToPalette(resource)"><span class="glyphicon glyphicon-arrow-right"></span></button>
