Palette deletion and more.

--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -54,7 +54,7 @@
               <div ng-repeat="asset in palette.assets" ng-controller="AssetCtrl" class="media well {{asset.type}} palette_item"
                    ng-switch on="asset.type">
                   <a class="pull-left" href="#">
-                    <img class="media-object" src="{{apiBase}}image/64x64/{{asset.source.id}}.{{asset.source.extension}}"
+                    <img class="media-object" ng-src="{{apiBase}}image/64x64/{{asset.source.id}}.{{asset.source.extension}}"
                            ng-switch-when="image">
                       <img class="media-object" src="/assets/img/icon_sound.png" ng-switch-when="sound">
                       <img class="media-object" src="/assets/img/icon_light.png" ng-switch-when="light">
