Disable resource descriptions for now.

--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -32,7 +32,7 @@
                 <img class="media-object" src="/assets/img/icon_light.png" ng-switch-when="light">
               </td>
               <td class="sp_title"><h5>{{resource.name}}</h5>
-                  <div class="longdescription"><p>{{resource.description}}</p></div>
+                <!--<div class="longdescription"><p>{{resource.description}}</p></div>-->
               </td>
               <td class="sp_actions">
                 <div class="btn-group btn-group-sm pull-right">
