Fixed new resource showing last opened resource changes

--- a/src/app/palettes/palettes.tpl.html
+++ b/src/app/palettes/palettes.tpl.html
@@ -17,7 +17,8 @@
           <tabset>
             <tab heading="Alla" select="filterPalettes()"></tab>
             <tab heading="Mina" select="filterPalettes('user')"></tab>
-            <!--<tab heading="Alla organisationens" select="filterResources()"></tab>-->
+            <!--tab heading="Min organisation" select="filterPalettes('organisation')"></tab-->
+            <!--tab heading="Alla organisationens" select="filterResources()"></tab>-->
           </tabset>
       </div>
 
