Restrict option preselect fix

--- a/src/app/edit/addEditResource.tpl.html
+++ b/src/app/edit/addEditResource.tpl.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group">
           <label for="restrict">Dela med</label>
-          <select ng-model="resource.restrict" ng-options="option.value as option.label for option in restrictOptions"></select>
+          <select ng-model="formChoice.restrict" ng-options="option for option in restrictOptions"></select>
         </div>
       </fieldset>
       <!--
