--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -96,3 +96,125 @@ div.sp_navbar {
     margin:0 auto;
     width:940px;
 }
+
+/**
+ * For the correct positioning of the placeholder element, the dnd-list and
+ * it's children must have position: relative
+ */
+.dndLists ul[dnd-list],
+.dndLists ul[dnd-list] > li {
+	position: relative;
+}
+
+/**
+ * The dnd-list should always have a min-height,
+ * otherwise you can't drop to it once it's empty
+ */
+.dndLists ul[dnd-list] {
+    min-height: 42px;
+    padding-left: 0px;
+}
+
+/**
+ * The dndDraggingSource class will be applied to
+ * the source element of a drag operation. It makes
+ * sense to hide it to give the user the feeling
+ * that he's actually moving it.
+ */
+.dndLists ul[dnd-list] .dndDraggingSource {
+    display: none;
+}
+
+/**
+ * An element with .dndPlaceholder class will be
+ * added to the dnd-list while the user is dragging
+ * over it.
+ */
+.dndLists ul[dnd-list] .dndPlaceholder {
+    display: block;
+    background-color: #ddd;
+    min-height: 42px;
+}
+
+/**
+ * The dnd-lists's child elements currently MUST have
+ * position: relative. Otherwise we can not determine
+ * whether the mouse pointer is in the upper or lower
+ * half of the element we are dragging over. In other
+ * browsers we can use event.offsetY for this.
+ */
+.dndLists ul[dnd-list] li {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    
+    /* Disable text selection if item is not draggable */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/**
+ * Gender-specifc background
+ */
+.dndLists ul[dnd-list] li.background-man {
+	background-color: #CAE0FC;
+}
+
+.dndLists ul[dnd-list] li.background-woman {
+	background-color: #FFE2F5;
+}
+
+.dndLists ul[dnd-list] input.background-man {
+	background-color: #D8E9FF;
+	color: #2F4D99;
+}
+
+.dndLists ul[dnd-list] input.background-woman {
+	background-color: #FFF0FA;
+	color: #D84FA7;
+}
+
+/**
+ * Handle positioning
+ */
+ 
+ 
+.dndLists .handle {
+    cursor: move;
+    position: relative;
+    top: 14px;
+    margin-right: 8px;
+    float: left;
+    clear: left;
+}
+
+.dndLists .thumb {
+    float: left;
+}
+
+.dndLists .thumb img {
+    height: 40px;
+}
+
+.dndLists .name {
+    top:0;
+    left:0;
+    right:0;
+    margin-left: 20px;
+    float: left;
+    width: 220px;
+    overflow: auto;
+}
+
+.dndLists .resource {
+    min-height: 40px;
+    overflow: auto;
+}
