--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -15,16 +15,13 @@ div.sp_fixedcontainer {
     width:940px;
     height:100%;
     position:relative;
-    /*margin-bottom: 10px;*/
-    /*background:url(../img/dev/10-60-10_grid.png) -10px 0 repeat;*/
 }
+
 div.sp_fixedcontainer_performer {
     margin:0 auto;
     width:960px;
     height:100%;
     position:relative;
-    /*margin-bottom: 10px;*/
-    /*background:url(../img/dev/10-60-10_grid.png) -10px 0 repeat;*/
 }
 
 div.sp_title {
@@ -40,19 +37,21 @@ div.sp_title h1 {
     font-size:30px;
     margin:0;
 }
+
 div.sp_palette {
-    position:absolute;
-    top:20px;
-    left:480px;
-    width:460px;
-    bottom:10px;
+  position:absolute;
+  top:20px;
+  left:480px;
+  width:460px;
+  bottom: 0;
 }
+
 div.sp_resources {
     position:absolute;
     top:20px;
     left:0px;
     width:460px;
-    bottom:10px;
+    bottom: 0;
 }
 
 div.sp_palettes {
@@ -60,8 +59,9 @@ div.sp_palettes {
     top:20px;
     left:0px;
     width:460px;
-    bottom:10px;
+    bottom: 0;
 }
+
 div.sp_toolbar {
     position:absolute;
     top:0;
@@ -69,6 +69,7 @@ div.sp_toolbar {
     right:0;
     height:110px;
 }
+
 div.sp_scrollport {
     position:absolute;
     top:150px;
@@ -151,7 +152,7 @@ div.sp_navbar {
     display: block;
     padding: 10px 15px;
     margin-bottom: -1px;
-    
+
     /* Disable text selection if item is not draggable */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -185,8 +186,8 @@ div.sp_navbar {
 /**
  * Handle positioning
  */
- 
- 
+
+
 .dndLists .handle {
     cursor: move;
     position: relative;
